src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Badger Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0 - No Stages Started</fullName>
        </values>
        <values>
            <fullName>1 - Prospecting</fullName>
        </values>
        <values>
            <fullName>1 - Top Account</fullName>
        </values>
        <values>
            <fullName>2 - Account Qualification</fullName>
        </values>
        <values>
            <fullName>2 - Qualification</fullName>
        </values>
        <values>
            <fullName>3 - Needs Analysis</fullName>
        </values>
        <values>
            <fullName>3 - Opportunity Identification</fullName>
        </values>
        <values>
            <fullName>4 - Quote%5CBid</fullName>
        </values>
        <values>
            <fullName>4 - Technical Approval</fullName>
        </values>
        <values>
            <fullName>5 - Negotiation%5CReview</fullName>
        </values>
        <values>
            <fullName>5 - Proposal</fullName>
        </values>
        <values>
            <fullName>6 - Proposal Outcome</fullName>
        </values>
        <values>
            <fullName>7 - Receive Order</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Decision_Date__c</fullName>
        <label>Actual Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_Date__c</fullName>
        <label>Actual Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <label>Application Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applications_of__c</fullName>
        <label>Applications of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Fluid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;I Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encoders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Reading System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Network Reading Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics/Meter Data Management Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bid_Sales_Process_Opportunity_ID__c</fullName>
        <label>Bid Sales Process Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Line_Items__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DM_O_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM O External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Loader_ID__c</fullName>
        <label>Data Loader ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Information__c</fullName>
        <inlineHelpText>Any details on the End User Company that may not be captured elsewhere (e.g., related Account record)</inlineHelpText>
        <label>End User Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_Date__c</fullName>
        <label>Expected Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Sales_Approach__c</fullName>
        <label>Expected Sales Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_File__c</fullName>
        <label>Load File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Electric_Services__c</fullName>
        <label>Number of Electric Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Gas_Services__c</fullName>
        <label>Number of Gas Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Water_Services__c</fullName>
        <label>Number of Water Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Value__c</fullName>
        <label>Original Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pivotal_ID__c</fullName>
        <label>Pivotal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Solutions__c</fullName>
        <label>Primary Product Solution(s)</label>
        <picklist>
            <controllingField>Expected_Sales_Approach__c</controllingField>
            <picklistValues>
                <fullName>Automotive Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEACON AMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Series Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibrator Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GALAXY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Oval Gear (IOG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModMAG/M-Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitors / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReadCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valves (RCV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services / Technical Field Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity - Iton</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Lines of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEACON AMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Series Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibrator Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Oval Gear (IOG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModMAG/M-Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitors / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReadCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valves (RCV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services / Technical Field Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tool</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Bid_Expiration_Reminder__c</fullName>
        <label>Proposal\Bid Expiration Reminder</label>
        <picklist>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Bid_Expiration__c</fullName>
        <label>Proposal\Bid Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <inlineHelpText>If specified</inlineHelpText>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Opening_Date__c</fullName>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Proposal Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Outcome_Notes__c</fullName>
        <label>Proposal Outcome Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Receive_Date__c</fullName>
        <label>Proposal Request Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Received__c</fullName>
        <label>Proposal Request Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted_Date__c</fullName>
        <label>Proposal Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSM__c</fullName>
        <label>TSM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Sum of the prices of related BigMachines Quotes</description>
        <label>Total Award Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Turnkey_Completion_Date__c</fullName>
        <label>Turnkey Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Turnkey__c</fullName>
        <label>Turnkey?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Reason__c</fullName>
        <label>Win/Loss Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability and/or lead time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Canceled Bid</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com_del__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;), Account.ddc_prospector__Sourced_from_Data_com__c = 1), &quot;Added from Data.com&quot;,&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Central_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All Central Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Mountain_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All Mountain Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Northeast_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Northeast Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Preso_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Application_Description__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Product_Solutions__c</field>
            <operation>includes</operation>
            <value>Preso</value>
        </filters>
        <label>All Preso Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_RCV_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Application_Description__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Product_Solutions__c</field>
            <operation>includes</operation>
            <value>Research Control Valve</value>
        </filters>
        <label>All RCV Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_South_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All South Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Southeast_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All Southeast Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_West_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All West Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Win_Loss_Reason__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CloseOpportunity</fullName>
        <active>true</active>
        <businessProcess>Badger Opportunity</businessProcess>
        <label>Closed Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flow_Instrumentation</fullName>
        <active>true</active>
        <businessProcess>Badger Opportunity</businessProcess>
        <label>Flow Instrumentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility</fullName>
        <active>true</active>
        <businessProcess>Badger Opportunity</businessProcess>
        <label>Utility</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Turnkey_Completion_Date_Invalid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Turnkey__c, &quot;No&quot;),
    NOT(ISBLANK(Turnkey_Completion_Date__c))
   )</errorConditionFormula>
        <errorDisplayField>Turnkey_Completion_Date__c</errorDisplayField>
        <errorMessage>If Turnkey = No, then Turnkey Completion Date must be blank.  Please remove this value to proceed.</errorMessage>
    </validationRules>
</CustomObject>